--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "color": "^4.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.14.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
