--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/color": "^3.0.2",
     "classnames": "^2.3.1",
     "color": "^4.0.0",
+    "emailjs-com": "^3.2.0",
+    "fetch-jsonp": "^1.2.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
