--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.14.0"
+    "react-hook-form": "^7.14.0",
+    "react-scrollmagic": "^2.3.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
