--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
+    "@tanstack/react-query": "^4.22.0",
     "@types/color": "^3.0.2",
     "@types/react-helmet": "^6.1.2",
     "classnames": "^2.3.1",
     "color": "^4.0.0",
     "emailjs-com": "^3.2.0",
     "fetch-jsonp": "^1.2.1",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "next": "11.1.1",
     "next-redux-wrapper": "^7.0.5",
