--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && next start",
+    "dev:set": "set export NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build:set": "set export NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "start:set": "set export NODE_OPTIONS=--openssl-legacy-provider && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -33,13 +36,14 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@playwright/test": "^1.36.1",
     "@types/md5": "^2.3.2",
     "@types/react": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.33.1",
     "typescript": "4.3.5"
   }
 }
